tests/semantic_cases/invalid/procedure_end_name_mismatch.ob0
MODULE Main;
PROCEDURE Echo(x);
BEGIN
  WriteInt(x)
END WrongName;
BEGIN
END Main.
